# labby

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
contracts/: labby-openapi.yaml
docs/: a1-jobs-outbox-handoff.md  a2-frontend-contract-checklist.md  a2-social-current-handoff.md  a3-sales-bots-widget-handoff.md  a3-sales-campaigns-handoff.md  a3-sales-channels-webhooks-analytics-handoff.md  a3-sales-contacts-handoff.md  a3-sales-inbox-handoff.md  a4-sales-outbound-evolution-handoff.md  a5-observability-loadtest-handoff.md  f1-bootstrap-handoff.md  f2-auth-memberships-handoff.md  f3-team-invites-modules-handoff.md  labby-separation-action-plan.md  production-secrets.md  scalability-architecture.md
migrations/: env.py
tests/: test_ai_specialist_analysis.py  test_apify_client.py  test_auth_routes.py  test_celery.py  test_config.py  test_health.py  test_healthz.py  test_identity_helpers.py  test_identity_models.py  test_job_runner.py  test_job_service.py  test_jobs_models.py  test_jobs_routes.py  test_modules_routes.py  test_phyllo_client.py  test_public_widget_routes.py  test_rate_limit.py  test_sales_analytics_routes.py  test_sales_bot_routes.py  test_sales_bots_widget_integration.py  test_sales_campaign_routes.py  test_sales_campaigns_integration.py  test_sales_channel_routes.py  test_sales_channels_adapter.py  test_sales_contact_routes.py  test_sales_contact_service.py  test_sales_contacts_integration.py  test_sales_conversation_routes.py  test_sales_inbox_integration.py  (+15 more)
(+100 files in other folders)
