[project]
name = "labby-backend"
version = "0.1.0"
description = "Backend proprio da Labby"
requires-python = ">=3.11,<3.13"
dependencies = [
  "alembic>=1.13.3",
  "celery>=5.4.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "bcrypt>=4.0.1",
  "httpx>=0.27.2",
  "psycopg[binary]>=3.2.3",
  "pydantic-settings>=2.6.0",
  "python-jose[cryptography]>=3.3.0",
  "redis>=5.1.1",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
  "fastapi.Body",
  "fastapi.Cookie",
  "fastapi.Depends",
  "fastapi.Header",
  "fastapi.Path",
  "fastapi.Query",
  "fastapi.Security",
]
